force-app/main/default/objects/Agent_Performance__c/fields/Late_Time_Score_F__c.field-meta.xml
<CustomField>
    <fullName>Late_Time_Score_F__c</fullName>
    <formula>IF (ISBLANK(Late_Time_Type__c),NULL,
IF (Late_Time_Score_3__c  &gt;= Late_Time_Data__c,3,
IF (Late_Time_Score_2__c  &gt;= Late_Time_Data__c, 2,
IF (Late_Time_Score_1__c  &gt;= Late_Time_Data__c, 1
,0)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late_Time_Score_F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>