force-app/main/default/objects/Agent_Performance__c/fields/Late_Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Late_Time_Type__c</fullName>
    <label>Late_Time_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>