force-app/main/default/objects/Agent_Performance__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <formula>IF ( MONTH(Document_Date__c) == 1, &apos;January&apos;, 
IF ( MONTH(Document_Date__c) == 2, &apos;February&apos;, 
IF ( MONTH(Document_Date__c) == 3, &apos;March&apos;, 
IF ( MONTH(Document_Date__c) == 4, &apos;April&apos;, 
IF ( MONTH(Document_Date__c) == 5, &apos;May&apos;, 
IF ( MONTH(Document_Date__c) == 6, &apos;June&apos;, 
IF ( MONTH(Document_Date__c) == 7, &apos;July&apos;, 
IF ( MONTH(Document_Date__c) == 8, &apos;August&apos;, 
IF ( MONTH(Document_Date__c) == 9, &apos;September&apos;, 
IF ( MONTH(Document_Date__c) == 10, &apos;October&apos;, 
IF ( MONTH(Document_Date__c) == 11, &apos;November&apos;, 
IF ( MONTH(Document_Date__c) == 12, &apos;December&apos;,&apos;&apos;)))))))))))) 
&amp;&apos; &apos;&amp;TEXT(Year(Document_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periode</label>
    <type>Text</type>
</CustomField>