force-app/main/default/objects/Agent_Performance__c/fields/Productivity__c.field-meta.xml
<CustomField>
    <fullName>Productivity__c</fullName>
    <formula>Contact_Rate__c + Attempt_Call__c + Referral__c + Email_WA__c + Aux__c + AHT__c + Agree_to_Redebet__c + Agree_to_Reinstate__c + Inforce__c + Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productivity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>