force-app/main/default/objects/Agent_Performance__c/fields/Productivity_C__c.field-meta.xml
<CustomField>
    <fullName>Productivity_C__c</fullName>
    <label>Productivity C</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>