force-app/main/default/objects/Agent_Performance__c/fields/Productivity_D__c.field-meta.xml
<CustomField>
    <fullName>Productivity_D__c</fullName>
    <label>Productivity D</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>