force-app/main/default/objects/Agent_Performance__c/fields/Productivity_E__c.field-meta.xml
<CustomField>
    <fullName>Productivity_E__c</fullName>
    <label>Productivity E</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>