force-app/main/default/objects/Agent_Performance__c/fields/Productivity_Point2__c.field-meta.xml
<CustomField>
    <fullName>Productivity_Point2__c</fullName>
    <formula>Productivity_Point__c / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productivity Point (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>