force-app/main/default/objects/Agent_Performance__c/fields/Productivity_Point__c.field-meta.xml
<CustomField>
    <fullName>Productivity_Point__c</fullName>
    <formula>Contact_Rate_Point__c + Attempt_Call_Point__c + Referral_Point__c + Email_WA_Point__c + Aux_Point__c + AHT_Point__c + Agree_to_Redebet_Point__c + Agree_to_Reinstate_Point__c + Inforce_Point__c + Cases_Point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productivity Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>