force-app/main/default/objects/Agent_Performance__c/fields/Quality_Point__c.field-meta.xml
<CustomField>
    <fullName>Quality_Point__c</fullName>
    <formula>Call_Monitoring_Point__c + Quiz_Point__c + Error_Rate_Point__c + Survey_Push_Rate_Point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>