force-app/main/default/objects/Agent_Performance__c/fields/Quiz__c.field-meta.xml
<CustomField>
    <fullName>Quiz__c</fullName>
    <label>Quiz</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>