force-app/main/default/objects/Agent_Performance__c/fields/Quiz_Data_Auto__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Data_Auto__c</fullName>
    <label>Quiz_Data_Auto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>