force-app/main/default/objects/Agent_Performance__c/fields/Quiz_Data_System__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Data_System__c</fullName>
    <label>Quiz_Data_System</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>