force-app/main/default/objects/Agent_Performance__c/fields/Quiz_Desc__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Desc__c</fullName>
    <label>Quiz_Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>