force-app/main/default/objects/Agent_Performance__c/fields/Quiz_Point__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Point__c</fullName>
    <formula>Quiz__c * VALUE(TEXT(Quiz_Score__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quiz Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>