force-app/main/default/objects/Agent_Performance__c/fields/Quiz_Score_F__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Score_F__c</fullName>
    <formula>IF (ISBLANK(Quiz_Type__c),NULL,
IF (Quiz_Score_3__c  &gt;= Quiz_Data__c,3,
IF (Quiz_Score_2__c  &gt;= Quiz_Data__c, 2,
IF (Quiz_Score_1__c  &gt;= Quiz_Data__c, 1
,0)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quiz_Score_F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>