force-app/main/default/objects/Agent_Performance__c/fields/Quiz_Type__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Type__c</fullName>
    <label>Quiz_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>