force-app/main/default/objects/Agent_Performance__c/fields/Referral_Data__c.field-meta.xml
<CustomField>
    <fullName>Referral_Data__c</fullName>
    <label>Referral Data</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>