force-app/main/default/objects/Agent_Performance__c/fields/Referral_Data_System__c.field-meta.xml
<CustomField>
    <fullName>Referral_Data_System__c</fullName>
    <label>Referral_Data_System</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>