force-app/main/default/objects/Agent_Performance__c/fields/Referral_Desc__c.field-meta.xml
<CustomField>
    <fullName>Referral_Desc__c</fullName>
    <label>Referral_Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>