force-app/main/default/objects/Agent_Performance__c/fields/Referral_Point__c.field-meta.xml
<CustomField>
    <fullName>Referral_Point__c</fullName>
    <formula>Referral__c * VALUE(TEXT(Referral_Score__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>