force-app/main/default/objects/Agent_Performance__c/fields/Referral_Score_F__c.field-meta.xml
<CustomField>
    <fullName>Referral_Score_F__c</fullName>
    <formula>IF (ISBLANK(Referral_Type__c),NULL,
IF (Referral_Score_3__c  &gt;= Referral_Data__c,3,
IF (Referral_Score_2__c  &gt;= Referral_Data__c, 2,
IF (Referral_Score_1__c  &gt;= Referral_Data__c, 1
,0)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral_Score_F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>