force-app/main/default/objects/Agent_Performance__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <label>Referral_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>