force-app/main/default/objects/Agent_Performance__c/fields/Refresh_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Parameter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh Parameter</label>
    <type>Checkbox</type>
</CustomField>