force-app/main/default/objects/Agent_Performance__c/fields/Survey_Push_Rate_Data__c.field-meta.xml
<CustomField>
    <fullName>Survey_Push_Rate_Data__c</fullName>
    <label>Survey Push Rate Data</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>