force-app/main/default/objects/Agent_Performance__c/fields/Survey_Push_Rate_Desc__c.field-meta.xml
<CustomField>
    <fullName>Survey_Push_Rate_Desc__c</fullName>
    <label>Survey_Push_Rate_Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>