force-app/main/default/objects/Agent_Performance__c/fields/Survey_Push_Rate_Point__c.field-meta.xml
<CustomField>
    <fullName>Survey_Push_Rate_Point__c</fullName>
    <formula>Survey_Push_Rate__c * VALUE(TEXT(Survey_Push_Rate_Score__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Push Rate Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>