force-app/main/default/objects/Agent_Performance__c/fields/Survey_Push_Rate_Score_F__c.field-meta.xml
<CustomField>
    <fullName>Survey_Push_Rate_Score_F__c</fullName>
    <formula>IF (ISBLANK(Survey_Push_Rate_Type__c),NULL,
IF (Survey_Push_Rate_Score_3__c  &gt;= Survey_Push_Rate_Data__c,3,
IF (Survey_Push_Rate_Score_2__c  &gt;= Survey_Push_Rate_Data__c, 2,
IF (Survey_Push_Rate_Score_1__c  &gt;= Survey_Push_Rate_Data__c, 1
,0)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey_Push_Rate_Score_F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>