force-app/main/default/objects/Agent_Performance__c/fields/Total_Discipline__c.field-meta.xml
<CustomField>
    <fullName>Total_Discipline__c</fullName>
    <formula>Discipline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total_Discipline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>