force-app/main/default/objects/Agent_Performance__c/fields/Total_Productivity__c.field-meta.xml
<CustomField>
    <fullName>Total_Productivity__c</fullName>
    <formula>Productivity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total_Productivity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>