force-app/main/default/objects/Agent_Performance__c/fields/Total_Quality__c.field-meta.xml
<CustomField>
    <fullName>Total_Quality__c</fullName>
    <formula>Quality__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total_Quality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>